--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    
+    <link rel="icon" type="image/png" href="./Storefront.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <title>Nft Marketplace</title>
